--- a/style.css
+++ b/style.css
@@ -46,6 +46,129 @@ header {
     flex-direction: row;
 }
 
+.content {
+    display: flex;
+    width: 100%;
+    max-width: 1920px;
+    padding: 10px;
+    margin-top: 50px;
+    background: url("page/bg2.jpg");
+    background-repeat: repeat;
+    background-size: auto;
+    min-height: 700px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+}
+
+.left-content {
+    flex-basis: 50%;
+}
+
+.oferta {
+    max-width: 1920px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 50px 0;
+    background: url("page/bg3.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    flex-wrap: wrap;
+}
+
+.text-grey {
+    color: grey;
+    text-align: center;
+}
+
+.text-blue {
+    color: blue;
+    font-weight: 700;
+    margin: 10px 0;
+    text-align: center;
+}
+
+.footer-paterns {
+    display: flex;
+    justify-content: end;
+    color: white;
+    flex-direction: column;
+    width: 500px;
+}
+
+.footer-patern {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 20px 0 50px;
+}
+
+.footer-logo {
+    height: 142px;
+    margin: 0 20px;
+}
+
+.partner {
+    text-align: center;
+    padding: 100px 0;
+}
+
+footer {
+    background: url("page/bg4.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 700px;
+    margin-top: 100px;
+}
+
+h2 {
+    color: white;
+    font-size: 40px;
+    font-style: italic;
+    align-items: center;
+    font-weight: 700;
+}
+
+.motto {
+    font-size: 50px;
+    text-align: center;
+    font-weight: 700;
+    font-style: italic;
+    color: #92bcd2;
+}
+
+.oferty {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    max-width: 350px;
+    background: white;
+    height: auto;
+    border-radius: 23px;
+    margin: 30px 10px;
+    align-items: center;
+    padding: 20px;
+    -webkit-box-shadow: 5px 5px 23px 5px rgba(166, 166, 166, 0.78);
+    box-shadow: 5px 5px 23px 5px rgba(166, 166, 166, 0.78);
+}
+
+.boldspan {
+    font-weight: 700;
+    color: black;
+}
+
+.omnie {
+    color: grey;
+    margin: 20px 0;
+}
+
+.right-content {
+    display: flex;
+    -content: center;
+    align-items: center;
+}
+
 .menuburger {
     color: white;
     width: 16px;
