--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ header {
 .content {
     display: flex;
     width: 100%;
-    max-width: 1920px;
+    /* max-width: 1920px; */
     padding: 10px;
     margin-top: 50px;
     background: url("page/bg2.jpg");
@@ -83,7 +83,7 @@ header {
 }
 
 .text-blue {
-    color: blue;
+    color: #1ea8f1;
     font-weight: 700;
     margin: 10px 0;
     text-align: center;
@@ -99,7 +99,7 @@ header {
 
 .footer-patern {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
     margin: 20px 0 50px;
 }
@@ -111,7 +111,7 @@ header {
 
 .partner {
     text-align: center;
-    padding: 100px 0;
+    padding: 25px 0;
 }
 
 footer {
@@ -135,7 +135,7 @@ h2 {
     text-align: center;
     font-weight: 700;
     font-style: italic;
-    color: #92bcd2;
+    color: #1ea8f1;
 }
 
 .oferty {
