--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    height: 280px;
+    height: 15vh;
     flex-wrap: wrap;
 }
 
@@ -47,22 +47,25 @@ header {
 }
 
 .content {
+    /* poprawić */
     display: flex;
     width: 100%;
-    /* max-width: 1920px; */
-    padding: 10px;
-    margin-top: 50px;
+    /* padding: 10px; */
     background: url("page/bg2.jpg");
-    background-repeat: repeat;
     background-size: auto;
-    min-height: 700px;
-    background-size: cover;
+    height: 100vh;
+    max-height: fit-content;
     background-repeat: no-repeat;
     box-sizing: border-box;
 }
 
 .left-content {
     flex-basis: 50%;
+}
+
+.omnie {
+    color: grey;
+    margin: 20px 0;
 }
 
 .oferta {
@@ -75,6 +78,21 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     flex-wrap: wrap;
+}
+
+.oferty {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    max-width: 350px;
+    background: white;
+    height: auto;
+    border-radius: 23px;
+    margin: 30px 10px;
+    align-items: center;
+    padding: 20px;
+    -webkit-box-shadow: 5px 5px 23px 5px rgba(166, 166, 166, 0.78);
+    box-shadow: 5px 5px 23px 5px rgba(166, 166, 166, 0.78);
 }
 
 .text-grey {
@@ -138,29 +156,9 @@ h2 {
     color: #1ea8f1;
 }
 
-.oferty {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    max-width: 350px;
-    background: white;
-    height: auto;
-    border-radius: 23px;
-    margin: 30px 10px;
-    align-items: center;
-    padding: 20px;
-    -webkit-box-shadow: 5px 5px 23px 5px rgba(166, 166, 166, 0.78);
-    box-shadow: 5px 5px 23px 5px rgba(166, 166, 166, 0.78);
-}
-
 .boldspan {
     font-weight: 700;
     color: black;
-}
-
-.omnie {
-    color: grey;
-    margin: 20px 0;
 }
 
 .right-content {
